SimGrid-java (3.6.1) unstable; urgency=low

 * Introduce msg.simgrid.Mutex, exporting simgrid mutex to Java.
 * Do not embeed our version of semaphores, java 1.5 can be considered
   as sufficiently prevalent for us to not dupplicate its features.
 * Make Process.kill(process) an instance method, not a static one
 * Fix a bug around Process.kill()
 * Add the asynchronous API to the bindings.
 * Add "sleep" in Process with Thread-like syntax/use.
 * Change the way the Process are created in ApplicationHandler: a full 
constructor is now needed for your child classes.
 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid-java (3.6) unstable; urgency=low

 * Initial release.
 * Split of every thing from simgrid v3.5 into a separate package.

 -- 2011-10-05 Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>