@@ -41,7 +41,6 @@ public class Master extends Process {
 					break;	
 				}
 		}
-		
 		process2.kill();
 
 		Msg.info("Process2 is now killed, should exit now");
