@@ -68,19 +68,6 @@ void jprocess_join(jobject jprocess, JNIEnv * env);
 void jprocess_start(jobject jprocess, JNIEnv * env);
 
 /**
- * This function forces the java process to stop.
- *
- * @param jprocess		The java process to stop.
- * @param env			The env of the current thread
- *
- * @exception			If the class Process is not found the function throws
- *						the ClassNotFoundException. If the methos stop() of
- *						this class is not found the function throws the exception
- *						NotSuchMethodException.
- */
-void jprocess_exit(jobject jprocess, JNIEnv * env);
-
-/**
  * This function associated a native process to a java process instance.
  *
  * @param jprocess		The java process instance.
@@ -236,7 +223,7 @@ JNIEXPORT void JNICALL Java_org_simgrid_msg_Process_waitFor
  * Signature	(Lsimgrid/msg/Process;)V
  */
 JNIEXPORT void JNICALL Java_org_simgrid_msg_Process_kill
-    (JNIEnv *, jclass, jobject);
+    (JNIEnv *, jobject);
 
 /*
  * Class		org_simgrid_msg_Process
